exports[`components Item renders 1`] = `
<a
  className="list-group-item list-group-item-action"
  onClick={[Function]}
  style={Object {}}>
  <span>
    2016
  </span>
  <span
    className="badge badge-warning badge-pill ml-auto">
    2
  </span>
</a>
`;

exports[`components Item renders for the active item 1`] = `
<a
  className="list-group-item list-group-item-action active"
  onClick={[Function]}
  style={Object {}}>
  <span>
    2016
  </span>
  <span
    className="badge badge-warning badge-pill ml-auto">
    2
  </span>
</a>
`;
